--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "material-styles",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "@material-ui/style bundle",
     "main": "dist/material-styles.production.min.js",
     "files": ["dist"],
     "dependencies": {
-        "@material-ui/core": "4.5.0"
+        "@material-ui/core": "~4.6.1"
     },
     "devDependencies": {
         "react": "16.10.1",
