--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
     "name": "material-styles",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "description": "@material-ui/style bundle",
     "main": "dist/material-styles.production.min.js",
-    "files": ["dist"],
+    "files": [
+        "dist"
+    ],
     "dependencies": {
-        "@material-ui/core": "~4.6.1"
+        "@material-ui/core": "~4.6.1",
+        "@material-ui/lab": "^4.0.0-alpha.45"
     },
     "devDependencies": {
         "react": "16.10.1",
